placing on the board (with bug)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,9 @@
                 {
                         "type": "chrome",
                         "request": "launch",
-                        "name": "client",
-                        "sourceMaps": true,
-                        "file": "${workspaceFolder}/build/index.html",
-                        "runtimeExecutable": "/Users/yeyandong/Desktop/chrome-mac/Chromium.app/Contents/MacOS/Chromium"
-                }
-                
+                        "name": "Launch Chrome",
+                        "url": "http://localhost:8080",
+                        "webRoot": "${workspaceFolder}"
+                },   
         ]
 }
