--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"cd ./frontend && npm start\" \"cd ./backend && npm start\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "allinstall": "npm install && cd ./frontend && npm install && cd ../backend && npm install"
   },
   "repository": {
     "type": "git",
