--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "colyseus.js": "^0.10.8",
     "react": "^16.8.6",
     "react-awesome-button": "^6.1.2",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dnd": "^7.6.0",
     "react-dnd-html5-backend": "^7.6.0",
     "react-dom": "^16.8.6",
