--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
-    "express-session": "^1.16.2"
+    "express-session": "^1.16.2",
+    "mongoose": "^5.6.2"
   }
 }
