--- a/backend/package.json
+++ b/backend/package.json
@@ -38,12 +38,14 @@
     "@colyseus/monitor": "^0.10.0",
     "@colyseus/social": "^0.10.2",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
     "colyseus": "^0.10.7",
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-session": "^1.16.2",
+    "mongodb": "^3.2.7",
     "mongoose": "^5.6.2"
   }
 }
