--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@colyseus/schema": "^0.4.36",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "colyseus.js": "^0.10.8",
